--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/hospital.logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/HospitalLogo.png" />
     <!--
       changed the icon
     -->
